# cmus-android

./: .gitattributes  .gitignore  .gitmodules  README.md  gradle.properties  patch.sh  settings.gradle
.github/workflows/: ci.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/net/pgaskin/cmus/android/: CmusDebugReceiver.java  CmusFiles.java  CmusIpc.java  CmusService.java  CmusSettings.java  CmusSlider.java  CmusTheme.java  ControlBar.java  JoyDot.java  KeyRow.java  LicensesActivity.java  MainActivity.java  MaterialYouTheme.java  MediaButtonReceiver.java  MediaControl.java  OggCover.java  SettingsActivity.java  StateSaver.java  TermService.java  Ui.java
app/src/main/res/drawable/: ic_add.xml  ic_arrow_upward.xml  ic_close.xml  ic_home.xml  ic_keyboard.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_play.xml  ic_queue_add.xml  ic_queue_remove.xml  ic_repeat.xml  ic_search.xml  ic_settings.xml  ic_shuffle.xml  ic_shuffle_albums.xml  ic_sleep.xml  ic_volume.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/xml/: backup_rules.xml
gradle/: verification-metadata.xml
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 2.txt  3.txt  4.txt
native/: CMakeLists.txt
native/cmake/: FindOgg.cmake  FindOpus.cmake
native/cmus/: CMakeLists.txt
native/ports/libiconv/: CMakeLists.txt  config.h  gen.sh
native/ports/ncurses/: CMakeLists.txt  gen.sh
native/ports/termux/: CMakeLists.txt
notes/: architecture.md  check-reproducible.go  reproducible-builds.md  spec.md  status.md
notes/plans/: 00-overview.md  01-scaffolding.md  02-submodules.md  03-native-deps-a.md  04-native-deps-b.md  05-cmus.md  06-terminal.md  07-ipc.md  08-ipc-client.md  09-media.md  10-lifecycle.md  11-chrome-a.md  12-chrome-b.md  13-input-a.md  14-input-b.md  15-filter-sleep.md  16-theme-font.md  17-refresh.md  18-data.md  18-settings.md  19-continuous-save.md  20-ogg-opus-art.md  21-touch-joystick.md  22-termux-from-source.md  23-saf.md
patches/cmus/: 0001-add-an-Android-app-IPC-socket.patch  0001-op-aaudio-fix-dsp.aaudio.sharing_mode-getter.patch  0002-Properly-handle-directory-listing-errors-in-browser.patch  0002-drop-remote-stream-support-under-CONFIG_ANDROID.patch  0003-Fix-old-colors-being-left-behind-when-applying-an-in.patch  0003-op-aaudio-fix-sharing_mode-getter-reading-performanc.patch  0004-add-an-Android-app-IPC-socket.patch  0004-route-input-plugin-reopen-through-an-ip_reopen_path-.patch  0004-save-playlists-atomically-via-a-temporary-file.patch  0005-add-an-Android-app-IPC-socket.patch  0005-drop-remote-stream-support-under-CONFIG_ANDROID.patch  0005-link-plugins-into-the-executable-under-CONFIG_STATIC.patch  0006-drop-remote-stream-support-under-CONFIG_ANDROID.patch  0006-drop-the-cmus-remote-socket-server-under-CONFIG_ANDR.patch  0006-save-playlists-atomically-via-a-temporary-file.patch  0007-link-plugins-into-the-executable-under-CONFIG_STATIC.patch  0007-route-debug-output-to-logcat-under-CONFIG_ANDROID.patch  0007-save-playlists-atomically-via-a-temporary-file.patch  0008-default-the-file-browser-to-a-fixed-dir-under-CONFIG.patch  0008-drop-the-cmus-remote-socket-server-under-CONFIG_ANDR.patch  0008-link-plugins-into-the-executable-under-CONFIG_STATIC.patch  0008-neuter-spawn-under-CONFIG_ANDROID.patch  0009-default-the-file-browser-to-a-fixed-dir-under-CONFIG.patch  0009-drop-the-cmus-remote-socket-server-under-CONFIG_ANDR.patch  0009-drop-the-run-shell-status_display_program-commands-u.patch  0009-route-debug-output-to-logcat-under-CONFIG_ANDROID.patch  0010-default-the-file-browser-to-a-fixed-dir-under-CONFIG.patch  0010-drop-CD-audio-support-under-CONFIG_ANDROID.patch  0010-route-debug-output-to-logcat-under-CONFIG_ANDROID.patch  0011-accept-and-ignore-removed-options-in-old-configs-und.patch  0011-default-the-file-browser-to-a-fixed-dir-under-CONFIG.patch  0011-drop-the-run-shell-status_display_program-commands-u.patch  0012-browser-up-only-commit-browser_dir-after-a-successfu.patch  0012-drop-CD-audio-support-under-CONFIG_ANDROID.patch  0012-drop-the-run-shell-status_display_program-commands-u.patch  0013-Fix-old-colors-being-left-behind-when-applying-an-in.patch  0013-accept-and-ignore-removed-options-in-old-configs-und.patch  0013-drop-CD-audio-support-under-CONFIG_ANDROID.patch  0014-accept-and-ignore-removed-options-in-old-configs-und.patch  0015-SAF-RPC-transport-under-CONFIG_ANDROID.patch  (+1 more)
patches/termux-app/: 0001-terminal-view-resolve-R-from-the-app-namespace.patch  0002-silence-deprecation-warnings.patch
